--- a/.github/workflows/auto_push/edit.yml
+++ b/.github/workflows/auto_push/edit.yml
@@ -11,19 +11,15 @@ jobs:
       - name: Checkout Repo 
         uses: actions/checkout@v4
 
-      - name: Go to target directory
-        run: cd /.github/workflows/auto_push/ 
-
       - name: Open file and edit 
-        run: echo "Adding text - this is a test" >> test_file.txt 
+        run: echo "Adding text - this is a test" >> .github/workflows/auto_push/test_file.txt 
       
       - name: Add, commit, and push 
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: | 
-          git add text_file.txt 
-          git commit "added minor text"
-          git push origin master
-        
-
-
-
-          
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git add .github/workflows/auto_push/test_file.txt 
+          git commit -m "added minor text"
+          git push origin HEAD:master
