--- a/.github/workflows/update_readme.yml
+++ b/.github/workflows/update_readme.yml
@@ -25,7 +25,7 @@ jobs:
           CLIENT_ID: ${{ secrets.STRAVA_CLIENT_ID }}
           CLIENT_SECRET: ${{ secrets.STRAVA_CLIENT_SECRET }}
           REFRESH_TOKEN: ${{ secrets.STRAVA_REFRESH_TOKEN }}
-        run: python fetch_strava.py
+        run: python strava/fetch_strava.py
 
       - name: Commit and push changes
         env:
